added properly parsing of last page and update notes

--- a/settings.json
+++ b/settings.json
@@ -21,5 +21,7 @@
 				"topic_id": "21481",
 				"language": "RU"
 			}
-	]
+	],
+	"test": true,
+	"test_last_entry_link": "https://rutracker.org/forum/viewtopic.php?t=6292415"
 }
