added youtube trailer adding, fixe bugs

--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,8 @@
 	"TELEGRAM_BOT_TOKEN": "os.environ['TELEGRAM_BOT_TOKEN']",
 	"OPENAI_API": "os.environ['OPENAI_API']",
 	"FEED_URL": "https://feed.rutracker.cc/atom/f/1605.atom",
+	"DEEPL_API_KEY": "os.environ['DEEPL_API_KEY']",
+	"YOUTUBE_API_KEY": "os.environ['YOUTUBE_API_KEY']",
 	"GROUPS": [
 			{
 				"group_name": "Kefir_new_games",
@@ -18,7 +20,7 @@
 			{
 				"group_name": "Kefir_ukr",
 				"chat_id": "-1001790782971",
-				"topic_id": "21481",
+				"topic_id": "25501",
 				"language": "RU"
 			}
 	],
