Refactor checker, improve parsing & add YT title check
- **Refactored** core logic from `checker.py` into modular files (`feed_handler`, `tracker_parser`, `youtube_search`, `telegram_sender`, `settings_loader`, `main`).
- **Revised Settings/Test Mode:** Loads `test_settings.json` exclusively if present, forcing test mode; otherwise loads default/local. Test mode now processes only `test_last_entry_link`, skipping RSS fetch.
- **Improved HTML Parsing (`tracker_parser.py`):** Aggressively cleans HTML for Telegram compatibility (removes unsupported tags like `<span>`), separates initial title block (for YT search) from main description. Extracts display title from `<title>`.
- **Enhanced YouTube Search:** Compares found video title against extracted title block text (`main.py`); adds trailer link only on match and notifies admin on mismatch (`telegram_sender.py`).
- **Fixed Bugs:** Resolved Python 3.9 type hint errors, circular import, `NameError` (missing `magnet_link`), and `SyntaxError` (`break` outside loop).

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 requests
 beautifulsoup4
 feedparser
-telebot
+pyTelegramBotAPI
 openai
-selenium
-webdriver-manager
 google-api-python-client
 google-cloud-translate
-bs4
